--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ nav {
     left: 0;
     right: 0;
     top: 10px;
-    text-align: center;
 }
 
 nav ul {
@@ -72,7 +71,8 @@ header{
 }
 
 header img{
-  
+    
+  margin: 0 auto;
   border-radius:50%;
   border: 5px solid white;
   
