work in progress

--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
-
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:400,700';
-
 
 /* ----- GENERAL ----- */
 
-
 ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
-html, body, section, header{
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  
+html,
+body,
+section,
+header {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
 }
 
 
 /* ========== HEADER ==========*/
+
 
 /* ----- NAV ------ */
 
@@ -29,23 +29,24 @@ nav {
 
 nav ul {
     list-style: none;
-    margin: 0;                
-    padding: 0;             
-    display: inline-block;   
+    margin: 0;
+    padding: 0;
+    display: inline-block;
 }
 
 nav ul li {
     float: left;
-    margin-left: 10px;          
+    margin-left: 10px;
     padding: 0;
 }
+
 nav ul li a {
     color: rgb(204, 204, 204);
-    display: block; 
+    display: block;
     padding: 10px 15px;
     text-decoration: none;
     width: 150px;
-}  
+}
 
 nav ul li:hover a {
     color: white;
@@ -54,165 +55,152 @@ nav ul li:hover a {
     text-decoration: none;
 }
 
-nav hr{
-  width: 90%;
-  color: #000;
-  margin-top: 0;
+nav hr {
+    width: 90%;
+    color: #000;
+    margin-top: 0;
 }
+
 
 /* ----- /NAV ------ */
 
-header{
-  height: 100vh;
-  width: 98.792vw;
-  color: white;
-  background: #000 url(https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg) center center/cover no-repeat;
-  text-align: center;
+header {
+    height: 100vh;
+    width: 98.792vw;
+    color: white;
+    background: #000 url(https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg) center center/cover no-repeat;
+    text-align: center;
 }
 
-header img{
-    
-  margin: 0 auto;
-  border-radius:50%;
-  border: 5px solid white;
-  
+header img {
+    border-radius: 50%;
+    border: 5px solid white;
 }
 
 
 /* ========== /HEADER ==========*/
 
 
-
-
-
 /* ABOUT */
 
-.about{
-  height: 100vh;
-  width: 98.792vw;
-  text-align:center;
+.about {
+    height: 100vh;
+    width: 98.792vw;
+    text-align: center;
 }
 
-.about-me{
-  width: 40%;
-  display: inline-block;
-  
+.about-me {
+    width: 40%;
+    display: inline-block;
 }
 
-.achievements{
-  width: 40%;
-  display: inline-block;
+.achievements {
+    width: 40%;
+    display: inline-block;
 }
 
-.achievements ul li{
-  display:inline-block;
+.achievements ul li {
+    display: inline-block;
 }
 
-.achievements img{
-  margin-bottom: 2px;
+.achievements img {
+    margin-bottom: 2px;
 }
-
 
 
 /* PORTFOLIO */
 
-.portfolio{
-  height: 100vh;
-  width: 98.792vw;
-  padding-top: 15%;
-  color: #ffffff;
-  color: rgb(230, 230, 230);
-  background: #000 url(https://pixabay.com/static/uploads/photo/2015/09/02/12/30/foot-bridge-918476_960_720.jpg) center center/cover no-repeat;
-  text-align:center;
+.portfolio {
+    height: 100vh;
+    width: 98.792vw;
+    padding-top: 15%;
+    color: #ffffff;
+    color: rgb(230, 230, 230);
+    background: #000 url(https://pixabay.com/static/uploads/photo/2015/09/02/12/30/foot-bridge-918476_960_720.jpg) center center/cover no-repeat;
+    text-align: center;
 }
 
-.portfolio ul li{
-  display: inline-block;
-  margin-bottom: 4px;
+.portfolio ul li {
+    display: inline-block;
+    margin-bottom: 4px;
 }
-
-
-
 
 
 /* SKILLS */
 
-.skills{
-  width: 98.792vw;
-  padding-top: 20%;
-  padding-bottom: 20%;
-  text-align:center;
+.skills {
+    width: 98.792vw;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    text-align: center;
 }
+
 
 /* EXPERIENCE */
 
-.experience{
-  width: 98.792vw;
-  padding-top: 20%;
-  padding-bottom: 20%;
-  text-align:center;
+.experience {
+    width: 98.792vw;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    text-align: center;
 }
-
-
-
-
 
 
 /* CONTACT */
 
-.contact{
-  width: 100%;
-  padding-top: 20%;
-  padding-bottom: 20%;
-  text-align: center;
+.contact {
+    width: 100%;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    text-align: center;
 }
 
-.horizontal-list{
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+.horizontal-list {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
-.footer-icons{
-  position: relative;
+.footer-icons {
+    position: relative;
 }
 
-.footer-icon-facebook:before{
-  content: "\f082";
-  color: #000;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  margin-left: 1em;
-  font-size: 30px;
-  position: absolute;
-  top: 10px;
+.footer-icon-facebook:before {
+    content: "\f082";
+    color: #000;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    margin-left: 1em;
+    font-size: 30px;
+    position: absolute;
+    top: 10px;
 }
 
-.footer-icon-github:before{
-  content: "\f092";
-  color: #000;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  font-size: 30px;
-  padding-left: 2em;
-  position: absolute;
-  top: 10px;
+.footer-icon-github:before {
+    content: "\f092";
+    color: #000;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    font-size: 30px;
+    padding-left: 2em;
+    position: absolute;
+    top: 10px;
 }
 
-.footer-icon-freecodecamp:before{
-  content:"\f06d";
-  color: #000;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: inherit;
-  font-size: 30px;
-  padding-left: 3em;
-  position: absolute;
-  top: 10px;
+.footer-icon-freecodecamp:before {
+    content: "\f06d";
+    color: #000;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    font-size: 30px;
+    padding-left: 3em;
+    position: absolute;
+    top: 10px;
 }
