--- a/style.css
+++ b/style.css
@@ -15,47 +15,44 @@ header {
 }
 
 
-/* ========== HEADER ==========*/
-
-
 /* ----- NAV ------ */
 
-nav {
+.top-nav {
     position: fixed;
     left: 0;
     right: 0;
+    text-align:center;
     top: 10px;
+    
 }
 
-nav ul {
+.top-nav ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
     display: inline-block;
 }
 
-nav ul li {
+.top-nav ul li {
     float: left;
-    margin-left: 10px;
-    padding: 0;
 }
 
-nav ul li a {
+.top-nav ul li a {
     color: rgb(204, 204, 204);
     display: block;
     padding: 10px 15px;
     text-decoration: none;
-    width: 150px;
+    width: 200px;
+    height: 40px;
 }
 
-nav ul li:hover a {
+.top-nav ul li:hover a {
     color: white;
     background-color: #000;
     background-color: rgba(255, 255, 255, 0.1);
     text-decoration: none;
 }
 
-nav hr {
+.nav-hr {
     width: 90%;
     color: #000;
     margin-top: 0;
@@ -64,19 +61,49 @@ nav hr {
 
 /* ----- /NAV ------ */
 
-header {
+
+/* ========== HEADER ==========*/
+
+.home {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
     width: 98.792vw;
     color: white;
     background: #000 url(https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg) center center/cover no-repeat;
-    text-align: center;
 }
 
-header img {
+.home-img {
+    order: 1;
     border-radius: 50%;
     border: 5px solid white;
 }
 
+.home-name{
+    order: 2;
+}
+
+.home-footer{
+    order: 3;
+}
+
+
+
+.home-arrows-text{
+
+}
+
+.home-arrows-icon{
+    
+}
 
 /* ========== /HEADER ==========*/
 
