--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ ul {
 
 html,
 body,
-section,
-header {
+section {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
@@ -21,9 +20,8 @@ header {
     position: fixed;
     left: 0;
     right: 0;
-    text-align:center;
+    text-align: center;
     top: 10px;
-    
 }
 
 .top-nav ul {
@@ -38,11 +36,15 @@ header {
 
 .top-nav ul li a {
     color: rgb(204, 204, 204);
-    display: block;
+    display: inline-block;
     padding: 10px 15px;
     text-decoration: none;
     width: 200px;
     height: 40px;
+}
+
+@media all and (max-width: 750px) {
+    /* Screens lower than 750px */
 }
 
 .top-nav ul li:hover a {
@@ -75,6 +77,7 @@ header {
     -webkit-align-items: center;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 100vh;
     width: 98.792vw;
     color: white;
@@ -87,23 +90,25 @@ header {
     border: 5px solid white;
 }
 
-.home-name{
+.home-name {
     order: 2;
 }
 
-.home-footer{
-    order: 3;
+.home-footer {
+    position: absolute;
+    text-align: center;
+    width: 10vw;
+    ;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
+.home-arrows-text {}
 
+.home-arrows-icon {}
 
-.home-arrows-text{
-
-}
-
-.home-arrows-icon{
-    
-}
 
 /* ========== /HEADER ==========*/
 
