--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ ul {
 
 html,
 body,
-section {
+section,
+header{
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
@@ -43,12 +44,10 @@ section {
     height: 40px;
 }
 
-@media all and (max-width: 750px) {
-    /* Screens lower than 750px */
-}
+
 
 .top-nav ul li:hover a {
-    color: white;
+    color: #FFFFFF;
     background-color: #000;
     background-color: rgba(255, 255, 255, 0.1);
     text-decoration: none;
@@ -97,15 +96,16 @@ section {
 .home-footer {
     position: absolute;
     text-align: center;
-    width: 10vw;
-    ;
+    width: 13vw;
     margin: 0 auto;
     left: 0;
     right: 0;
     bottom: 0;
 }
 
-.home-arrows-text {}
+.home-arrows-text {
+    font-size: 110%;
+}
 
 .home-arrows-icon {}
 
