--- a/style.css
+++ b/style.css
@@ -122,19 +122,21 @@ header{
     display: -ms-flexbox;
     display: flex;
     justify-content:center;
+    flex-direction: row;
     overflow: hidden;
     height: 100vh;
     width: 98.792vw;
+    padding-top: 10%;
 }
 
 .about-me {
     order: 1;
-    width: 40%;
+    width: 30%;
 }
 
 .achievements {
     order: 1;
-    width: 40%;
+    width: 30%;
 }
 
 .achievements ul li {
