--- a/style.css
+++ b/style.css
@@ -188,11 +188,58 @@ header{
 /* ========== SKILLS ==========*/
 
 .skills {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    height: 100vh;
     width: 98.792vw;
-    padding-top: 20%;
-    padding-bottom: 20%;
-    text-align: center;
 }
+
+.skills-header-title{
+    order: 1;
+    margin: 10vh;
+}
+.skills-description{
+    order: 2;
+    display: flex;
+    width: 700px;
+    
+}
+
+.skills ul{
+    list-style: none;
+    text-align: left;
+}
+
+.testimonials-header{
+    order: 3;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.testimonials{
+    order:4;
+    display:flex;
+}
+
+.testimonials blockquote{
+    font-style: italic;
+    font-size: 15px;
+    
+}
+
+
+
+
 
 /* ========== /SKILLS ==========*/
 
@@ -267,3 +314,5 @@ header{
     position: absolute;
     top: 10px;
 }
+
+/* ========== /CONTACT ==========*/
