--- a/style.css
+++ b/style.css
@@ -146,8 +146,7 @@
     justify-content: center;
     flex-direction: row;
     overflow: hidden;
-    min-height: 100vh;
-    height: auto;
+    height: 100vh;
     width: 98.792vw;
     background-color: #F0F1F6;
 }
@@ -323,55 +322,6 @@
     text-align: center;
 }
 
-.horizontal-list {
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-.footer-icons {
-    position: relative;
-}
-
-.footer-icon-facebook:before {
-    content: "\f082";
-    color: #000;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    margin-left: 1em;
-    font-size: 30px;
-    position: absolute;
-    top: 10px;
-}
-
-.footer-icon-github:before {
-    content: "\f092";
-    color: #000;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    font-size: 30px;
-    padding-left: 2em;
-    position: absolute;
-    top: 10px;
-}
-
-.footer-icon-freecodecamp:before {
-    content: "\f06d";
-    color: #000;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    font-size: 30px;
-    padding-left: 3em;
-    position: absolute;
-    top: 10px;
-}
 
 
 /* ========== /CONTACT ==========*/
