--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* ========== IMPORTS ==========*/
 
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:400,700';
-
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 /* ========== /IMPORTS ==========*/
@@ -9,8 +8,8 @@
 
 /* ========== GENERAL ==========*/
 
-*{
-    font-family: 'Roboto','Open Sans', sans-serif;
+* {
+    font-family: 'Roboto', 'Open Sans', sans-serif;
     font-weight: 300;
 }
 
@@ -142,7 +141,7 @@
     -webkit-flex-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
-    align-items:center;
+    align-items: center;
     justify-content: center;
     flex-direction: row;
     overflow: hidden;
@@ -151,8 +150,8 @@
     background-color: #F0F1F6;
 }
 
-
-.about-me, .achievements{
+.about-me,
+.achievements {
     order: 1;
     height: 60%;
     width: 25%;
@@ -249,7 +248,7 @@
     font-size: 20px;
 }
 
-.skills-title-span{
+.skills-title-span {
     position: absolute;
     left: 0;
     width: 5px;
@@ -257,7 +256,7 @@
     background-color: rgb(255, 51, 0);
 }
 
-.skills-description h2{
+.skills-description h2 {
     position: relative;
     font-size: 25px;
     text-align: center;
@@ -299,14 +298,31 @@
 /* ========== EXPERIENCE ==========*/
 
 .experience {
-    width: 98.792vw;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
     height: 100vh;
+    width: 98.792vw;
     text-align: center;
     background-color: #E3E4E9;
 }
 
 .experience ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.experience ul li{
+    display: inline-block;
 }
 
 
@@ -316,12 +332,27 @@
 /* ========== CONTACT ==========*/
 
 .contact {
-    width: 100%;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    background-color: rgb(115, 115, 115);
+    height: 400px;
+    width: 98.792vw;
     text-align: center;
 }
 
+.contact ul {
+    list-style: none;
+}
 
 
 /* ========== /CONTACT ==========*/
