--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@
     display: block;
     float: left;
     margin: 0 10px;
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
     cursor: pointer;
 }
 
@@ -97,11 +97,24 @@
     background-color: #fff;
     background-color: rgba(255, 255, 255, 1);
     text-indent: -999em;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 1);
     cursor: pointer;
     /* make the text accessible to screen readers */
     position: absolute;
 }
 
+.dot-nav li a:hover{
+    text-indent: 2em;   
+}
+
+.blend{
+    mix-blend-mode: difference;
+}
+
+.blend-side-nav{
+    mix-blend-mode: exclusion;
+}
 
 /* ========== /NAV ==========*/
 
