--- a/style.css
+++ b/style.css
@@ -488,5 +488,11 @@
     text-decoration: none;
 }
 
+.form ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 
 /* ========== /CONTACT ==========*/
