--- a/style.css
+++ b/style.css
@@ -492,6 +492,32 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    
+}
+
+
+.social-icons{
+    width: 70%;
+    margin: 0 auto;
+    border-bottom: 2px solid lightgray;
+}
+
+.social-icons ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.social-icons ul li{
+    list-style-type: none;
+    display: inline-block;
+    
+}
+
+.social-icons ul li a img {
+   display: inline-block;
+   border-radius: 50%;
+     
 }
 
 
