--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
     right: 0;
     text-align: center;
     top: 10px;
+    z-index: 1;
 }
 
 .top-nav ul {
@@ -361,7 +362,7 @@
 .svg-circle circle {
     cy: 10px;
     r: 8px;
-    stroke-width=2px;
+    stroke-width: 2px;
     fill: rgb(255, 255, 255);
     stroke: rgb(219, 70, 30);
 }
@@ -446,6 +447,100 @@
 
 .experience ul li {
     display: inline-block;
+}
+
+
+/* $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+*/
+
+
+/* to rename these in css and html */
+
+.container {
+    position: relative;
+    margin: 0 auto;
+    height: 200px;
+    background-color: #E3E4E9;
+    text-align: center;
+}
+
+.svg-size-pos {
+    left: 0;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    bottom: 54%;
+}
+
+.svg {
+    height: 5px;
+    width: 65%;
+}
+
+.svg line {
+    stroke: #2C3F50;
+    stroke-width: 20px;
+}
+
+.container ul {
+    list-style: none;
+    margin: 0 auto;
+    display: inline-block;
+    width: auto;
+    margin: 0 auto;
+}
+
+.container ul li {
+    float: left;
+    display: inline-block;
+}
+
+.content-container {
+    display: inline-block;
+    margin: auto 20px;
+    position: relative;
+    width: 140px;
+    height: 170px;
+    border-radius: 25px;
+    background: #E3E4E9;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.content-container:hover {
+    border: 2px solid rgb(219, 150, 30);
+}
+
+.second-container {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+}
+
+.big {
+    font-size: 120%;
+}
+
+.small {
+    font-size: 70%;
+}
+
+.svg-circle-float {
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    left: 60px;
+    bottom: 110%;
+    z-index: 2;
+}
+
+.work-svg-circle circle {
+    cy: 10px;
+    r: 8px;
+    stroke-width: 3px;
+    fill: white;
+    stroke: #2C3F50;
 }
 
 
