--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 
 /* ========== GENERAL ==========*/
 
-* {
+body {
+    margin: 0 auto;
     font-family: 'Roboto', 'Open Sans', sans-serif;
     font-weight: 300;
 }
@@ -47,7 +48,7 @@
 .top-nav ul li a {
     color: rgb(204, 204, 204);
     display: inline-block;
-    padding: 10px 15px;
+    padding-top: 15px;
     text-decoration: none;
     width: 180px;
     height: 40px;
@@ -62,8 +63,12 @@
 
 .nav-hr {
     width: 90%;
-    color: #000;
     margin-top: 0;
+    padding: 0;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 2px solid white;
 }
 
 .left-side-nav {
@@ -72,6 +77,7 @@
     width: 30px;
     height: 140px;
     top: 40%;
+    z-index: 1;
 }
 
 .dot-nav ul {
@@ -106,7 +112,6 @@
     text-decoration: none;
     color: rgba(255, 255, 255, 1);
     cursor: pointer;
-    /* make the text accessible to screen readers */
     position: absolute;
 }
 
@@ -456,48 +461,48 @@
 
 /* to rename these in css and html */
 
+.work-container,
+.exp-container {
+    width: 90%;
+    margin: 0 auto;
+}
+
 .container {
     position: relative;
-    margin: 0 auto;
+    width: 100%;
     height: 200px;
     background-color: #E3E4E9;
-    text-align: center;
-}
-
-.svg-size-pos {
-    left: 0;
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-    bottom: 54%;
-}
-
-.svg {
-    height: 5px;
-    width: 65%;
-}
-
-.svg line {
-    stroke: #2C3F50;
-    stroke-width: 20px;
 }
 
 .container ul {
     list-style: none;
-    margin: 0 auto;
     display: inline-block;
-    width: auto;
-    margin: 0 auto;
 }
 
 .container ul li {
     float: left;
-    display: inline-block;
+    margin: auto 40px;
+}
+
+.svg-size-pos {
+    position: absolute;
+    z-index: 1;
+    width: 70%;
+    bottom: 50%;
+    left: 15%;
+}
+
+.svg {
+    height: 5px;
+    width: 100%;
+}
+
+.svg line {
+    stroke: #2C3F50;
+    stroke-width: 10px;
 }
 
 .content-container {
-    display: inline-block;
-    margin: auto 20px;
     position: relative;
     width: 140px;
     height: 170px;
@@ -505,6 +510,7 @@
     background: #E3E4E9;
     text-align: center;
     padding-top: 10px;
+    border: 2px solid transparent;
 }
 
 .content-container:hover {
@@ -513,7 +519,7 @@
 
 .second-container {
     position: absolute;
-    bottom: 0;
+    bottom: 15%;
     width: 100%;
     height: 70px;
 }
@@ -531,7 +537,7 @@
     width: 20px;
     position: absolute;
     left: 60px;
-    bottom: 110%;
+    bottom: 73%;
     z-index: 2;
 }
 
@@ -541,6 +547,25 @@
     stroke-width: 3px;
     fill: white;
     stroke: #2C3F50;
+}
+
+.side-circle {
+    position: absolute;
+}
+
+.side-circle circle {
+    fill: #2C3F50;
+    stroke-width: 1px;
+}
+
+.left-circle {
+    bottom: 48.5%;
+    left: 14.5%
+}
+
+.right-circle {
+    bottom: 48.5%;
+    left: 84.5%;
 }
 
 
@@ -567,6 +592,7 @@
     width: 98.792vw;
     text-align: center;
     background: #FFF url(Img/cv-back.jpg) center center/cover no-repeat;
+    padding-bottom: 50px;
 }
 
 .contact ul {
