--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ body {
 
 .svg-circle circle {
     cy: 10px;
-    r: 8px;
+    r: 6px;
     stroke-width: 2px;
     fill: rgb(255, 255, 255);
     stroke: rgb(219, 70, 30);
@@ -532,7 +532,7 @@ body {
     font-size: 70%;
 }
 
-.svg-circle-float {
+.work-svg-circle-float {
     height: 20px;
     width: 20px;
     position: absolute;
