--- a/style.css
+++ b/style.css
@@ -541,6 +541,11 @@ body {
     z-index: 2;
 }
 
+.work-svg-circle {
+    height: 20px;
+    width: 20px;
+}
+
 .work-svg-circle circle {
     cy: 10px;
     r: 8px;
