--- a/style.css
+++ b/style.css
@@ -464,7 +464,7 @@ body {
 }
 
 .work-container,
-.exp-container {
+.edu-container {
     width: 90%;
     margin: 0 auto;
 }
@@ -529,6 +529,7 @@ body {
     font-size: 70%;
 }
 
+.edu-svg-circle-float,
 .work-svg-circle-float {
     height: 20px;
     width: 20px;
@@ -536,8 +537,10 @@ body {
     left: 60px;
     bottom: 73%;
     z-index: 2;
+    fill: white;
 }
 
+.edu-svg-circle,
 .work-svg-circle {
     height: 20px;
     width: 20px;
@@ -557,7 +560,7 @@ body {
     left: 84.5%;
 }
 
-.text-container {
+.experience-description-container {
     width: 50%;
     height: 200px;
     margin: 0 auto;
