--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .top-nav ul li a {
-    color: rgb(204, 204, 204);
+    color: #FFFFFF;
     display: inline-block;
     padding-top: 15px;
     text-decoration: none;
@@ -75,7 +75,8 @@ body {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 2px solid white;
+    border-top: 2px solid;
+    border-color: white;
 }
 
 .left-side-nav {
@@ -126,13 +127,19 @@ body {
     text-indent: 2em;
 }
 
+
+/*
 .blend {
     mix-blend-mode: difference;
 }
+*/
 
+
+/*
 .blend-side-nav {
     mix-blend-mode: exclusion;
 }
+*/
 
 
 /* ========== /NAV ==========*/
@@ -244,7 +251,7 @@ body {
 .achievements {
     order: 1;
     height: 60%;
-    width: 26%;
+    width: 25%;
     margin: auto 5%;
 }
 
