--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 /* ========== GENERAL ==========*/
 
 body {
-    margin: 0 auto;
+    margin: 0;
     font-family: 'Roboto', 'Open Sans', sans-serif;
     font-weight: 300;
 }
@@ -44,7 +44,7 @@ body {
 
 .top-nav ul {
     list-style: none;
-    margin: 0 auto;
+    margin: 0;
     display: inline-block;
 }
 
@@ -62,7 +62,7 @@ body {
 }
 
 .top-nav ul li:hover a {
-    color: #FFFFFF;
+    color: lightgray;
     background-color: #000;
     background-color: rgba(255, 255, 255, 0.1);
     text-decoration: none;
@@ -81,15 +81,42 @@ body {
 
 .left-side-nav {
     position: fixed;
-    background-color: rgb(219, 70, 30);
-    width: 30px;
-    height: 140px;
+    width: 110px;
+    height: 120px;
     top: 40%;
     z-index: 1;
+    text-align: center;
+    padding: 0;
 }
 
+.dot-nav {
+    width: 20%;
+    background-color: rgb(219, 70, 30);
+    height: 120px;
+}
+
+.dot-nav span {
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+}
+
+.dot-nav span svg {
+    width: 100%;
+    height: 100%;
+}
+
+.dot-nav span svg text {
+    position: absolute;
+    height: 20px;
+    width:
+}
+
+
+/*
 .dot-nav ul {
-    position: relative;
+    position: relative; 
     display: inline-block;
     margin: 20px 0;
     padding: 0;
@@ -126,6 +153,7 @@ body {
 .dot-nav li a:hover {
     text-indent: 2em;
 }
+*/
 
 
 /*
@@ -162,7 +190,7 @@ body {
     height: 100vh;
     width: 98.792vw;
     color: white;
-    background: #000 url(Img/landscape-nature-clouds-cloudy.jpg) center center/cover no-repeat;
+    background: #000 url(Img/home-background-highdef.jpg) center center/cover no-repeat;
 }
 
 .home-img {
@@ -314,6 +342,7 @@ body {
     height: 100vh;
     width: 98.792vw;
     background-color: #F0F1F6;
+    padding: 100px 0;
 }
 
 .skills-header-title {
@@ -371,14 +400,12 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 250px;
 }
 
 .skills ul li {
     width: 100%;
 }
-
-.skill-name {}
 
 .skill-level {
     font-size: 1px;
