--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@
 
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:400,700';
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,700,900);
+@font-face {
+    font-family: Nexa;
+    font-weight: lighter;
+    src: url('Fonts/Nexa Light.otf') format ('otf');
+}
+
+@font-face {
+    font-family: Nexa;
+    font-weight: bold;
+    src: url('Fonts/Nexa Bold.otf') format ('otf');
+}
+
 
 /* ========== /IMPORTS ==========*/
 
@@ -38,7 +50,6 @@ body {
     left: 0;
     right: 0;
     text-align: center;
-    top: 10px;
     z-index: 1;
 }
 
@@ -342,7 +353,7 @@ body {
     height: 100vh;
     width: 98.792vw;
     background-color: #F0F1F6;
-    padding: 100px 0;
+    padding: 5% 0;
 }
 
 .skills-header-title {
@@ -449,6 +460,7 @@ body {
     padding: 25px;
     margin: 0 10px;
     width: 280px;
+    font-family: 'Georgia';
     font-style: italic;
     font-size: 13px;
 }
@@ -480,11 +492,11 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    overflow: hidden;
     height: auto;
     width: 98.792vw;
     text-align: center;
     background-color: #E3E4E9;
+    padding: 5% 0;
 }
 
 .experience ul {
